--- a/.github/actions/prepare/action.yaml
+++ b/.github/actions/prepare/action.yaml
@@ -1,7 +1,7 @@
 name: Prepare project
 description: setting all project and prepare all files
 inputs:
-  secret-token:
+  SECRET_TOKEN:
     description: token for private repository
     required: true
 
@@ -49,13 +49,13 @@ runs:
           path: ./ui
 
       - name: Get japl-properties
-        if: ${{ inputs.secret-token != '' }}
+        if: ${{ inputs.SECRET_TOKEN != '' }}
         uses: actions/checkout@v4
         with:
           repository: ${{ github.actor }}/japl-properties
           ref: main
           path: ./japl-properties
-          token: ${{ inputs.secret-token }}
+          token: ${{ inputs.SECRET_TOKEN }}
       
       - name: Copy Values on project
         if: ${{ inputs.secret-token != '' }}
