--- a/.github/workflows/test-lint.yaml
+++ b/.github/workflows/test-lint.yaml
@@ -13,6 +13,7 @@ jobs:
     - uses: actions/checkout@v4
     
     - name: Get project settings
+      if: ${{ secrets.GH_PROPERTIES_CONNECT != '' }}
       uses: ./.github/actions/prepare
       with:
         SECRET_TOKEN: ${{ secrets.GH_PROPERTIES_CONNECT }}
