--- a/.github/workflows/test-lint.yaml
+++ b/.github/workflows/test-lint.yaml
@@ -17,4 +17,13 @@ jobs:
       uses: ./.github/actions/prepare
       with:
         SECRET_TOKEN: ${{ secrets.GH_PROPERTIES_CONNECT }}
+
+    - name: Test Lint
+      run: ./gradlew lintDebug
+
+    - name: Upload Artifact Report Test
+      uses: actions/upload-artifact@v4
+      with: 
+        name: ${{ github.ref }}-${{ github.event_name }}-${{ github.action }}
+        path: ./app/build/reports/
       
