--- a/.github/workflows/test-lint.yaml
+++ b/.github/workflows/test-lint.yaml
@@ -22,6 +22,7 @@ jobs:
       run: ./gradlew lintDebug
 
     - name: Upload Artifact Report Test
+      if: always()
       uses: actions/upload-artifact@v4
       with: 
         name: ${{ github.ref }}-${{ github.event_name }}-${{ github.action }}
