--- a/.github/workflows/test-lint.yaml
+++ b/.github/workflows/test-lint.yaml
@@ -26,5 +26,11 @@ jobs:
       uses: actions/upload-artifact@v4
       with: 
         name: ${{ github.ref }}-${{ github.event_name }}-${{ github.action }}
-        path: ./app/build/reports/
+        path: |
+                ./app/build/reports/
+                ./build/reports
+                ./japl-android-about-module/build/intermediates
+                ./japl-android-graphs/build/reports
+                ./japl-android-about-module/build/reports
+                ./connect-gdrive/build/reports
       
