--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -14,80 +14,12 @@ jobs:
 
     steps:
 
-      - name: Get Code from repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Remove android about module old folder link
-        run: |
-              rm -rf japl-android-about-module
-              rm -rf ScheduleModule
-              rm -rf connect-gdrive
-              rm -rf japl-android-graphs
-
-      - name: Get japl-android-about-module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-about-module
-          path: ./japl-android-about-module
-          ref: Finances
-
-      - name: Get japl-android-schedule-module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-schedule-module
-          path: ./ScheduleModule
-
-      - name: Get japl-android-google-connect-module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-google-connect-module
-          path: ./connect-gdrive
-
-      - name: Get Finances to get Graphs module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/Finances
-          path: ./finances
-
-      - name: Get japl-android-ui
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-ui
-          path: ./ui
-
-      - name: Get japl-properties
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-properties
-          ref: main
-          path: ./japl-properties
-          token: ${{ secrets.GH_PROPERTIES_CONNECT }}
-      
-      - name: Copy Values on project
-        run: |
-              cp ./japl-properties/torressansebastian/google_services.json ./app/google-services.json
-              rm -rf ./connect-gdrive/src/main/res/raw
-              mkdir ./connect-gdrive/src/main/res/raw
-              cp ./japl-properties/alameda181/credentials.json ./connect-gdrive/src/main/res/raw/
-              cp ./japl-properties/alameda181/cralameda181_34c486bb5b56.json ./connect-gdrive/src/main/res/raw/
-              cp ./japl-properties/torressansebastian/torressansebastian.jks ./app/
-              rm -rf ./japl-properties
-
-      - name: Duplication Folder on upper case UI
-        run: ln -s ./ui ./UI
-
-      - name: link code to graphs folder
-        run: ln -s ./finances/japl-android-graphs ./japl-android-graphs 
-
-      - name: Install Java
-        uses: actions/setup-java@v4
+      - uses: ./.github/actions/prepare
         with: 
-          distribution: 'temurin'
-          java-version: 17
-
-      - name: Setup Graddle And Validations
-        uses: gradle/actions/setup-gradle@v4
-
+          SECRET_TOKEN: ${{ secrets.GH_PROPERTIES_CONNECT }}
+      
       - name: added signing in gradle
         run: |
             cat << EOF >> app/build.gradle
@@ -117,36 +49,11 @@ jobs:
         if: always()
         with:
           name: build-reports
-          path: '**/build/reports/'
-
-      - name: Upload builds reports build actions 
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: build-reports
-          path: '/home/runner/_temp/.gradle-actions/build-results/'
-
-      - name: Upload Artifact Bundle
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: release-bundle
-          path: './app/build/outputs/bundle/release/'
+          path: |
+                **/build/reports/
+                ./app/build/outputs/bundle/release/
+                /home/runner/_temp/.gradle-actions/build-results/
 
   test-task:
-   runs-on: ubuntu-latest
-   steps:
+   uses: ./.github/workflows/test-lint.yaml
 
-     - uses: actions/checkout@v4
-     
-     - uses: ./.github/actions/prepare
-
-     - name: test execute
-       run: ./gradlew lintDebug
-
-     - name: Upload builds reports 
-       uses: actions/upload-artifact@v4
-       if: always()
-       with:
-          name: build-reports
-          path: '**/build/reports/'
