--- a/.github/workflows/test-lint.yaml
+++ b/.github/workflows/test-lint.yaml
@@ -23,6 +23,7 @@ jobs:
         SECRET_TOKEN: ${{ secrets.GH_PROPERTIES_CONNECT }}
 
     - name: Test Lint
+      continue-on-error: true
       run: ./gradlew lintDebug
 
     - name: Upload Artifact Report Test
