--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -19,6 +19,15 @@ jobs:
       - uses: ./.github/actions/prepare
         with: 
           SECRET_TOKEN: ${{ secrets.GH_PROPERTIES_CONNECT }}
+
+      - name: get version code and name of app
+        run: |
+              VERSION_CODE=$(grep -m 1 'versionCode' app/build.gradle | awk '{print $3')
+              VERSION_NAME=$(grep -m 1 'versionName' app/build.gradle | awk '"' '{print $3}')
+      - name: Show version information
+        run: |
+              echo "VersionCode: $VERSION_CODE"
+              echo "VersionName: $VERSION_NAME"
       
       - name: added signing in gradle
         run: |
@@ -52,11 +61,32 @@ jobs:
           name: build-reports
           path: |
                 **/build/reports/
-                ./app/build/outputs/bundle/release/
                 /home/runner/_temp/.gradle-actions/build-results/
+
+      - name: Upload Build Release
+        uses: actions/upload-artifact@v4
+        if: always()
+        with:
+          name: build-release
+          path: |
+                ./app/build/outputs/bundle/release/
 
   test-task:
    uses: ./.github/workflows/test-lint.yaml
    secrets:
      GH_PROPERTIES_CONNECT: ${{ secrets.GH_PROPERTIES_CONNECT }}
 
+  Deploy_AppStore_Android:
+    runs-on: ubuntu-latest
+    needs: Prepared_code
+    environment: PROD
+    
+    steps:
+
+      - uses: actions/download-artifact@v4
+        with:
+          path: ./
+          name: build-release
+
+          
+          
