--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -95,7 +95,7 @@ jobs:
         uses: r0adkll/upload-google-play@v1.1.0
         with:
           serviceAccountJson: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_KEY }}
-          pakageName: co.japl.android.torressansebastian
+          packageName: co.japl.android.torressansebastian
           releaseFile: ./app/build/outputs/bundle/release/app-release.aab
           track: internal
           inAppUpdatePriority: 0
