--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -103,4 +103,20 @@ jobs:
           track: internal
           inAppUpdatePriority: 0
           status: completed
+
+  Create_Tag:
+    runs-on: ubuntu-latest
+    needs: Deploy_AppStore_Android
+    
+    steps:
+
+      - name: Create Git Tag
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+              TAG_NAME="v${{ env.VersionCode }}"
+              git config --local user.email "actions-urtss@japl.dev"
+              git config --local user.name "Actions URTss"
+              git tag "$TAG_NAME"
+              git push origin "$TAG_NAME"
           
