--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -117,6 +117,6 @@ jobs:
               TAG_NAME="v${{ env.VersionCode }}"
               git config --local user.email "actions-urtss@japl.dev"
               git config --local user.name "Actions URTss"
-              git tag "$TAG_NAME"
+              git tag -a "$TAG_NAME -m "${{ env.VersionName }}"
               git push origin "$TAG_NAME"
           
