--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -99,9 +99,9 @@ jobs:
         run: ls -lnR
 
       - name: Deploy to Google Play
-        uses: r0adkll/upload-google-play@v1.1.0
+        uses: r0adkll/upload-google-play@v1.1.3
         with:
-          serviceAccountJson: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_KEY }}
+          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_KEY }}
           packageName: co.japl.android.torressansebastian
           releaseFiles: ./app-release.aab
           track: internal
