--- a/.github/workflows/test-lint.yaml
+++ b/.github/workflows/test-lint.yaml
@@ -1,15 +1,39 @@
 name: Execute Test with Lint gradle
 
 on: 
-  workflow_dispatch:
+  workflow_call:
+    secrets:
+     GH_PROPERTIES_CONNECT:
+      required: true
+      description: Secret used for get private repo
 
 jobs:
 
   config_repository:
    runs-on: ubuntu-latest
+   environment: PROD
 
    steps:
 
+    - uses: actions/checkout@v4
+    
     - name: Get project settings
       uses: ./.github/actions/prepare
-      
+      with:
+        SECRET_TOKEN: ${{ secrets.GH_PROPERTIES_CONNECT }}
+
+    - name: Test Lint
+      continue-on-error: true
+      run: ./gradlew lintDebug
+
+    - name: Upload Artifact Report Test
+      if: always()
+      uses: actions/upload-artifact@v4
+      with: 
+        name: lint-report
+        path: |
+                ./app/build/reports/
+                ./build/reports
+                ./japl-android-graphs/build/reports
+                ./japl-android-about-module/build/reports
+                ./connect-gdrive/build/reports
