--- a/.github/workflows/prepared.yaml
+++ b/.github/workflows/prepared.yaml
@@ -11,83 +11,31 @@ jobs:
   Prepared_code:
     environment: PROD
     runs-on: ubuntu-latest
+    outputs:
+      VersionCode: ${{ steps.getVersion.outputs.VersionCode }} 
+      VersionName: ${{ steps.getVersion.outputs.VersionName }} 
 
     steps:
 
-      - name: Get Code from repository
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Remove android about module old folder link
-        run: |
-              rm -rf japl-android-about-module
-              rm -rf ScheduleModule
-              rm -rf connect-gdrive
-              rm -rf japl-android-graphs
-
-      - name: Get japl-android-about-module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-about-module
-          path: ./japl-android-about-module
-          ref: Finances
-
-      - name: Get japl-android-schedule-module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-schedule-module
-          path: ./ScheduleModule
-
-      - name: Get japl-android-google-connect-module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-google-connect-module
-          path: ./connect-gdrive
-
-      - name: Get Finances to get Graphs module
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/Finances
-          path: ./finances
-
-      - name: Get japl-android-ui
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-android-ui
-          path: ./ui
-
-      - name: Get japl-properties
-        uses: actions/checkout@v4
-        with:
-          repository: ${{ github.actor }}/japl-properties
-          ref: main
-          path: ./japl-properties
-          token: ${{ secrets.GH_PROPERTIES_CONNECT }}
-      
-      - name: Copy Values on project
-        run: |
-              cp ./japl-properties/torressansebastian/google_services.json ./app/google-services.json
-              rm -rf ./connect-gdrive/src/main/res/raw
-              mkdir ./connect-gdrive/src/main/res/raw
-              cp ./japl-properties/alameda181/credentials.json ./connect-gdrive/src/main/res/raw/
-              cp ./japl-properties/alameda181/cralameda181_34c486bb5b56.json ./connect-gdrive/src/main/res/raw/
-              cp ./japl-properties/torressansebastian/torressansebastian.jks ./app/
-              rm -rf ./japl-properties
-
-      - name: Duplication Folder on upper case UI
-        run: ln -s ./ui ./UI
-
-      - name: link code to graphs folder
-        run: ln -s ./finances/japl-android-graphs ./japl-android-graphs 
-
-      - name: Install Java
-        uses: actions/setup-java@v4
+      - uses: ./.github/actions/prepare
         with: 
-          distribution: 'temurin'
-          java-version: 17
+          SECRET_TOKEN: ${{ secrets.GH_PROPERTIES_CONNECT }}
 
-      - name: Setup Graddle And Validations
-        uses: gradle/actions/setup-gradle@v4
-
+      - name: get version code and name of app
+        id: getVersion
+        run: |
+              VERSION_CODE=$(grep -m 1 'versionCode' app/build.gradle | awk '{print $2}')
+              VERSION_NAME=$(grep -m 1 'versionName' app/build.gradle | awk -F '"' '{print $2}')
+              echo "VersionCode=$VERSION_CODE" >> $GITHUB_OUTPUT
+              echo "VersionName=$VERSION_NAME" >> $GITHUB_OUTPUT
+              
+      - name: Show version information
+        run: |
+             echo "Version Code: ${{ steps.getVersion.outputs.VersionCode }}"
+             echo "Version Name: ${{ steps.getVersion.outputs.VersionName }}"
+      
       - name: added signing in gradle
         run: |
             cat << EOF >> app/build.gradle
@@ -110,6 +58,7 @@ jobs:
             EOF
 
       - name: build and scan
+        continue-on-error: true
         run: ./gradlew bundleRelease --no-daemon --no-parallel --info # build --scan --warning-mode all --stacktrace --info
       
       - name: Upload builds reports 
@@ -117,36 +66,62 @@ jobs:
         if: always()
         with:
           name: build-reports
-          path: '**/build/reports/'
+          path: |
+                **/build/reports/
+                /home/runner/_temp/.gradle-actions/build-results/
 
-      - name: Upload builds reports build actions 
+      - name: Upload Build Release
         uses: actions/upload-artifact@v4
         if: always()
         with:
-          name: build-reports
-          path: '/home/runner/_temp/.gradle-actions/build-results/'
-
-      - name: Upload Artifact Bundle
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: release-bundle
-          path: './app/build/outputs/bundle/release/'
+          name: build-release
+          path: |
+                ./app/build/outputs/bundle/release/
 
   test-task:
-   runs-on: ubuntu-latest
-   steps:
+   uses: ./.github/workflows/test-lint.yaml
+   secrets:
+     GH_PROPERTIES_CONNECT: ${{ secrets.GH_PROPERTIES_CONNECT }}
 
-     - uses: actions/checkout@v4
-     
-     - uses: ./.github/actions/prepare
+  Deploy_AppStore_Android:
+    runs-on: ubuntu-latest
+    needs: Prepared_code
+    environment: PROD
+    
+    steps:
 
-     - name: test execute
-       run: ./gradlew lintDebug
+      - uses: actions/download-artifact@v4
+        with:
+          path: ./
+          name: build-release
 
-     - name: Upload builds reports 
-       uses: actions/upload-artifact@v4
-       if: always()
-       with:
-          name: build-reports
-          path: '**/build/reports/'
+      - name: Check files
+        run: ls -lnR
+
+      - name: Deploy to Google Play
+        uses: r0adkll/upload-google-play@v1.1.3
+        with:
+          serviceAccountJsonPlainText: ${{ secrets.GOOGLE_PLAY_SERVICE_ACCOUNT_KEY }}
+          packageName: co.japl.android.torressansebastian
+          releaseFiles: ./app-release.aab
+          track: internal
+          inAppUpdatePriority: 0
+          status: completed
+
+  Create_Tag:
+    runs-on: ubuntu-latest
+    needs: [Deploy_AppStore_Android,Prepared_code]
+    
+    steps:
+
+      - uses: actions/checkout@v4
+      
+      - name: Create Git Tag
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
+        run: |
+              TAG_NAME="v${{ needs.Prepared_code.outputs.VersionCode }}"
+              git config --local user.email "actions-urtss@japl.dev"
+              git config --local user.name "Actions URTss"
+              git tag -a "$TAG_NAME" -m "${{ needs.Prepared_code.outputs.VersionName }}"
+              git push origin "$TAG_NAME"
