--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,8 +17,8 @@ android {
         applicationId "co.japl.android.torressansebastian"
         minSdk 26
         targetSdk 34
-        versionCode 1_02_5_37
-        versionName "V1.02.6 build 38 Se realiza ajuste del horario de la administración"
+        versionCode 1_02_7_41
+        versionName "V1.02.7 build 41 Despliegue desde github actions automaticamente"
 
         testInstrumentationRunner 'androidx.test.runner.AndroidJUnitRunner'
         vectorDrawables{
